--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,3 +32,4 @@ jobs:
           git add -f meta/loc.csv
           git commit -m "Update code statistics" || echo "No changes to commit"
           git push
+          git pull
